--- a/Manage.html
+++ b/Manage.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="row">
                     <div class="row">
-                        <select ng-model="selectedEngineer" ng-options="engineer for engineer in engineerList">
+                        <select ng-model="selectedEngineer" ng-options="engineer.name for engineer in engineerList">
                             <option value="">Choose Engineer:</option>
                         </select>
                     </div>
@@ -59,7 +59,7 @@
         </div>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-        <script type="text/javascript" src="https://cdn.firebase.com/js/client/2.1.0/firebase.js"></script>
+        <script type="text/javascript" src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
         <script type="text/javascript" src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
         <script>
             var authToken = "<YOUR-TOKEN-HERE>";
