--- a/Status.html
+++ b/Status.html
@@ -23,7 +23,7 @@
         </div>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-        <script type="text/javascript" src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+        <script type="text/javascript" src="https://cdn.firebase.com/js/client/2.2.0/firebase.js"></script>
         <script type="text/javascript" src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
         <script>
             var authToken = "<YOUR-TOKEN-HERE>";
@@ -61,7 +61,7 @@
                         var addr = baseUrl + "/scopes/" + name + "/records";
                         $scope.recordsList.push($firebase(new window.Firebase(addr)).$asArray());
                         $scope.recordsList[i].$loaded(function (x) {
-                            index = $scope.recordsList.indexOf(x);
+                            var index = $scope.recordsList.indexOf(x);
                             name = $scope.engineerList[index];
                             var title = scopes[index].title;
                             var rank = scopes[index].rank;
